--- a/extension/style.css
+++ b/extension/style.css
@@ -15,7 +15,7 @@
   --hmo-blue-200: #413c6d;
 }
 
-@font-face {
+/* @font-face {
   font-family: ppReg;
   src: url('chrome-extension://__MSG_@@extension_id__/assets/fonts/Poppins-Regular.ttf');
 }
@@ -28,7 +28,7 @@
 @font-face {
   font-family: ppSB;
   src: url('chrome-extension://__MSG_@@extension_id__/assets/fonts/Poppins-SemiBold.ttf');
-}
+} */
 
 body {
   width: 100vw;
@@ -44,7 +44,7 @@ body {
   display: flex;
 }
 
-.ppReg {
+/* .ppReg {
   font-family: ppReg;
 }
 
@@ -54,7 +54,7 @@ body {
 
 .ppSB {
   font-family: ppSB;
-}
+} */
 
 .hidden {
   visibility: hidden;
@@ -141,7 +141,7 @@ body {
   font-size: 13px;
   transition: all 0.2s ease-in-out;
   background: #000;
-  font-family: ppSB;
+  /* font-family: ppSB; */
 }
 
 .help-me-record-comp .hmo-error-component.show {
@@ -152,12 +152,12 @@ body {
 .help-me-record-comp .hmo-error-component.error {
   background: var(--hmo-red-200);
   color: #fff;
-  font-family: ppSB;
+  /* font-family: ppSB; */
 }
 .help-me-record-comp .hmo-error-component.success {
   background: var(--hmo-green-200);
   color: #000;
-  font-family: ppSB;
+  /* font-family: ppSB; */
 }
 
 .help-me-record-comp .heading .top {
@@ -286,7 +286,7 @@ body {
 .help-me-record-comp .screen-selection button.active {
   opacity: 1;
   font-weight: 900;
-  font-family: ppSB;
+  /* font-family: ppSB; */
 }
 
 .help-me-record-comp .screen-selection button .icon {
